# firsttest

./: Jenkinsfile  LICENSE  README.md  setup.cfg  tox.ini
docker/: Dockerfile.dev
docs/: Makefile  conf.py  index.rst  make.bat
firsttest/dataset/: make_dataset.py
firsttest/features/: build_features.py
firsttest/models/: batchgenerator.py  deepaas_api.py  main_prog.py  make_XY.py  process_blast.py  process_sequence_fasta.py  train_deepARG.py  train_model.py  train_model_1D.py
firsttest/visualization/: visualize.py
notebooks/: 1.0-firsttest_start.py2.ipynb
