[metadata]
name = firsttest
summary = tax class
description-file =
    README.md
author = Carlos Garcia
author-email = carlos.garcia@helmholtz-muenchen.de
version = 0.01
license = MIT
home-page = http://github.com/charlos1204/firsttest
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[files]
packages =
    firsttest

[entry_points]

deepaas.model = 
    firsttest = firsttest.models.deepaas_api

